fixed overlapp of idle_inhibitor and custom-update

--- a/config/v3/style_waybar_shadow.css
+++ b/config/v3/style_waybar_shadow.css
@@ -85,12 +85,11 @@ tooltip {
 
 #custom-update {
   font-size: 10px;
-  padding: 2px 0 0 0px;
-
 }
 
 #clock, #idle_inhibitor {
   margin-left: 8.75px;
+  margin: 2px;
 }
 
 .hidden {
